--- a/index.html
+++ b/index.html
@@ -5,34 +5,27 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="main.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 </head>
 <body>
-	<div class="container" ng-controller="game-ctrl">
-
+	<div class="container">
 		<div class="row">
 			<div class="col-xs-offset-1 col-md-offset-2 col-lg-offset-3 col-xs-10 col-md-8 col-lg-6 page-header">
 			  <h1>Mastermind <small>Can you break the code?</small></h1>
+			  <ul class="nav nav-pills">
+			  	<li ui-sref-active="active"><a ui-sref="instructions">Instructions</a></li>
+			  	<li ui-sref-active="active"><a ui-sref="game">Game</a></li>
+				  <li ui-sref-active="active"><a ui-sref="tips">Tips</a></li>
+				  <li ui-sref-active="active"><a ui-sref="leaderboard">Leaderboard</a></li>
+				</ul>
 			</div>
 		</div>
-
-		<div class="row">
-			<div id="game-board" class="col-lg-offset-2 col-xs-12 col-lg-8">
-				<div class="row" ng-repeat="row in rows">
-					<div class="col-xs-10 guess-row">
-						<div ng-attr-data-color="{{peg.color}}" ng-repeat="peg in row.guesses" class="game-peg" ng-click="toggleColor(peg, row)">
-						</div>
-					</div>
-					<div class="col-xs-2 feedback">
-						<div class="peg-container">
-							<button class="btn btn-lg btn-success eval" ng-click="evaluate()" ng-show="row.id === currentRow">Evaluate</button>
-							<span class="glyphicon glyphicon-heart feedback-peg exact" aria-hidden="true" ng-repeat="exactMatch in row.feedback.exact"></span>
-							<span class="glyphicon glyphicon-heart-empty feedback-peg" aria-hidden="true" ng-repeat="colorMatch in row.feedback.colorMatch"></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div ui-view></div>
 	</div>
-	<script src="app.js"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/game-ctrl.js"></script>
+	<script src="scripts/instructions-ctrl.js"></script>
+	<script src="scripts/tips-ctrl.js"></script>
+	<script src="scripts/leaderboard-ctrl.js"></script>
 </body>
 </html>
