--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Mastermind</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="main.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+	<script src="scripts/angular.js"></script>
+	<script src="scripts/angular-ui-router.js"></script>
 </head>
 <body>
 	<div class="container">
