--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/game-ctrl.js"></script>
 	<script src="scripts/instructions-ctrl.js"></script>
+	<script src="scripts/confetti.js"></script>
 </body>
 </html>
