--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mastermind</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="main.css">
 	<script src="scripts/angular.js"></script>
 	<script src="scripts/angular-ui-router.js"></script>
